fixing bug in services file that affects php 7.x

--- a/development_environment.services.yml
+++ b/development_environment.services.yml
@@ -3,4 +3,4 @@ parameters:
 
 services:
   development_environment.var.dump.service:
-    class: %development_environment.var.dump.class%
+    class: '%development_environment.var.dump.class%'
