Created settings page for module, allowing email suppression to be enabled/disabled through the admin interface. Added .php override to allow for permanent overrides that cannot be overridden through the admin UI

--- a/development_environment.routing.yml
+++ b/development_environment.routing.yml
@@ -13,3 +13,11 @@ development_environment.suppressed_email_log:
     _title: 'Suppressed Email'
   requirements:
     _permission: 'access development environment email logs'
+
+development_environment.settings_page:
+  path: '/admin/config/development/development_environment'
+  defaults:
+    _controller: '\Drupal\development_environment\Controller\DevelopmentEnvironmentController::settingsPage'
+    _title: 'Development Environment'
+  requirements:
+    _permission: 'administer development environment settings'
