--- a/development_environment.info.yml
+++ b/development_environment.info.yml
@@ -1,5 +1,5 @@
 name: Development Environment
 description: When this module is enabled, the system it is enabled on is marked as a development environment, logging emails to the watchdog instead of sending them out
 core: 8.x
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^8 || ^9 || ^10
 type: module
